<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:insetLeft="10dp"
            android:insetTop="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/test"
            android:textSize="20sp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/black95" />

        <Button
            android:id="@+id/buttonExam"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:insetLeft="10dp"
            android:insetTop="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/exam"
            android:textSize="20sp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/black95" />

        <Button
            android:id="@+id/buttonEntrance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:insetLeft="10dp"
            android:insetTop="10dp"
            android:insetRight="10dp"
            android:insetBottom="10dp"
            android:text="@string/entrance"
            android:textSize="20dp"
            app:cornerRadius="5dp"
            app:rippleColor="@color/black95" />

    </LinearLayout>

</RelativeLayout>