<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/purple_500"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="Создание экзамена"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/question_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|right"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="50dp"
                    android:text="@string/question1"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_question"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/question1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|right"
                    android:layout_margin="10dp"
                    android:gravity="center|right">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/question_points"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/style_btn_purple_white"
                        android:hint="12"
                        android:textColor="#171717"
                        android:textColorHint="@color/purple_200"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <ScrollView
                android:id="@+id/ansvers"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_answer1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_answer1_t"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/answer1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Switch
                        android:id="@+id/answer1_true_false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_stroke_white_press_blue"
                        android:backgroundTintMode="multiply" />
                </FrameLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="410dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_back"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="100dp"
                android:layout_weight="1"
                android:text="@string/back" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="вперед" />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>